# Brights_CPP_assessment_1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: file_input_output.h  transaction.h  transaction_functionality.h
src/: CMakeLists.txt  file_input_output.cpp  transaction.cpp  transaction_functionality.cpp
tests/: CMakeLists.txt  tests.cpp
users/: User1
